# soulinjector

./: .gitignore  Cargo.toml  README.md  build.sh  env.sh  procs-soul.ipynb  procs-soulinjector.md  test.py
examples/: basic_json.rs  procs_soul.rs
src/: hex_util.rs  lib.rs
