[package]
name = "soulinjector"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "soulinjector"
crate-type = ["cdylib"]

[dependencies]
difflib = "0.4.0"
serde_json = "1.0"

[dependencies.pyo3]
version = "0.6.0"
features = ["extension-module"]
